// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Urgency should render "?" if last event is not set 1`] = `
<span>
  ?
</span>
`;

exports[`Urgency should render "1 day left" if lastEvent was today 1`] = `
<span
  className="font-green"
>
  1 Day left
</span>
`;

exports[`Urgency should render "do it today" if lastEvent was one day ago and schedule is 1 1`] = `
<span
  className=""
>
  Do it today
</span>
`;

exports[`Urgency should render "n Days left" if was n days ago 1`] = `
<span
  className="font-red"
>
  2 Days late
</span>
`;
